Sat Apr  5 21:49:41 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (place_chequer_or_revert): fix bug.

Sat Apr  5 20:39:42 2003  Joern Thyssen  <jth@gnubg.org>

	Play sound when analysis is finished.

	* gnubg.c: new command "set sound sound analysisfinished .."
	* set.c (CommandSetSoundSoundAnalysisFinished): new function.
	* sound.c: define new sound.
	* analysis.c (CommandAnalyseGame, CommandAnalyseMatch):
	play sound when analysis is finished.

Sat Apr  5 15:28:28 2003  Joern Thyssen  <jth@gnubg.org>

	Option to skip analysis of one of the players.
	Option to goto first game when loading matches or sessions.

	* gnubg.c: new commands: "set analysis player ... analyse [yes|no],
	"set gotofirstgame ...", and "first game".
	* set.c (CommandSetAnalysisPlayer,
	CommandSetAnalysisPlayerAnalyse, CommandSetGotoFirstGame):
	new functions.
	* show.c (CommandShowAnalysis): show new flags.
	* gtkgame.c (AnalysisPage, AnalysisOK, AnalysisSet): gui widgets
	for new command.
	* gtkgame.c (OptionsPages, OptionSet, OptionsOK): new flags.
	* analysis.c (AnalyzeMove): new parameter (change all callers),
	use new flag.
	* play.c (CommandFirstGame): new function.
	* gnubg.c, sgf.c: call CommandFirstGame if fGotoFirstGame when
	loading and importing matches, games, and sessions.

Sat Apr  5 14:57:18 2003  Joern Thyssen  <jth@gnubg.org>

	play.c (TryBearoff): no auto-bearoff for hypergammon positions
	with contact.

Fri Apr  4 22:37:39 2003  Joern Thyssen  <jth@gnubg.org>

	Fix number of chequers off for hypergammon.

	* drawboard.c (DrawBoard), gtkboard.c (game_set): new parameter:
	number of chequers. Changed all callers.

Fri Apr  4 22:10:04 2003  Joern Thyssen  <jth@gnubg.org>

	* play.c (SetMatchID): bug fix: handle resignations
	correctly.
	(reported by mjan)

Fri Apr  4 22:02:00 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (printHTMLBoardGNU): fix bug: dice were printed
	on the wrong side of the board when fClockwise=1.
	(reported by Ian Shaw and Achim Mueller)
	
