@@ -1,3 +1,8 @@
+Mon Apr  7 21:22:46 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* sgf.c (RestoreNode): add missing call to FixMatchState.
+	(reported by Achim)
+
 Sat Apr  5 21:49:41 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* gtkboard.c (place_chequer_or_revert): fix bug.
